[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "metareserve"
author = "Sebastiaan Alvarez Rodriguez"
author-email = "a@b.c"
home-page = "https://github.com/Sebastiaan-Alvarez-Rodriguez/metareserve"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

