[metadata]
name = metareserve
version = 0.1.0
author = Sebastiaan Alvarez Rodriguez
author_email = a@b.c
description = A package providing a unified reservation interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sebastiaan-Alvarez-Rodriguez/metareserve
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = metareserve
packages = find:
python_requires = >=3.2

[options.packages.find]
where = metareserve
